TA-000 Fix alignment on modal

--- a/client/css/ussba.css
+++ b/client/css/ussba.css
@@ -247,25 +247,6 @@ tr td:not(:first-child) {
     padding-top: 10px;
   }
 
-  .modal-extra-info-table {
-    background-color: white;
-    border-top: none;
-    width: 100%;
-  }
-
-  .modal-extra-info-table-header, .modal-extra-info-table-data {
-    padding: 5px;
-    text-align: left;
-  }
-
-  .modal-extra-info-table, .modal-extra-info-table-header, .modal-extra-info-table-data {
-    border-collapse: collapse;
-  }
-
-  .modal-extra-info-table-data {
-    border-left: none !important;
-  }
-
   .modal-header {
     background-color: whitesmoke;
     padding-bottom: 22px;
